--- a/project-files/dynamips/4eb5e754-ab15-45ae-912b-577c452f2bb3/configs/i1_startup-config.cfg
+++ b/project-files/dynamips/4eb5e754-ab15-45ae-912b-577c452f2bb3/configs/i1_startup-config.cfg
@@ -1,27 +1,134 @@
 !
 !
+
+!
+! Last configuration change at 00:09:08 UTC Tue Dec 17 2019
+!
+version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
-no service password-encryption
 !
 hostname Aveiro
 !
-ip cef
-no ip domain-lookup
+boot-start-marker
+boot-end-marker
+!
+!
+!
+no aaa new-model
 no ip icmp rate-limit unreachable
-ip tcp synwait 5
-no cdp log mismatch duplex
+ip cef
+!
+!
+!
+!
+!
+!
+no ip domain lookup
+ipv6 unicast-routing
+ipv6 cef
+ipv6 multicast-routing
+!
+!
+multilink bundle-name authenticated
+!
+!
+!
+!
+!
+!
+!
+!
+!
+ip tcp synwait-time 5
+! 
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+interface Loopback0
+ ip address 10.0.0.3 255.0.0.0
+ ip ospf 2 area 0
+!
+interface FastEthernet0/0
+ ip address 192.100.1.11 255.255.255.248
+ ip ospf 2 area 0
+ speed auto
+ duplex auto
+ ipv6 address 2001:100:1::11/126
+ ipv6 ospf 2 area 0
+!
+interface FastEthernet0/1
+ ip address 192.100.1.17 255.255.255.252
+ ip ospf 2 area 0
+ speed auto
+ duplex auto
+ ipv6 address 2001:100:1::17/127
+ ipv6 ospf 2 area 0
+!
+interface FastEthernet1/0
+ ip address 192.100.3.1 255.255.255.0
+ ip ospf 2 area 0
+ speed auto
+ duplex auto
+ ipv6 address 2001:100:3::1/48
+ ipv6 ospf 2 area 0
+!
+interface FastEthernet1/1
+ ip address 192.100.1.21 255.255.255.252
+ ip ospf 2 area 0
+ speed auto
+ duplex auto
+ ipv6 address 2001:100:1::21/127
+ ipv6 ospf 2 area 0
+!
+interface FastEthernet2/0
+ no ip address
+ shutdown
+ speed auto
+ duplex auto
+!
+interface FastEthernet2/1
+ no ip address
+ shutdown
+ speed auto
+ duplex auto
+!
+router ospf 2
+!
+ip forward-protocol nd
+!
+!
+no ip http server
+no ip http secure-server
+!
+ipv6 router ospf 2
+!
+!
+!
+!
+control-plane
+!
 !
 line con 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+ stopbits 1
 line aux 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+ stopbits 1
+line vty 0 4
+ login
 !
 !
 end
