--- a/project-files/dynamips/a4a41cfb-b4f7-4181-a60e-930de4ef4891/configs/i3_startup-config.cfg
+++ b/project-files/dynamips/a4a41cfb-b4f7-4181-a60e-930de4ef4891/configs/i3_startup-config.cfg
@@ -1,28 +1,124 @@
 !
+
 !
+! Last configuration change at 20:55:34 UTC Tue Dec 17 2019
 !
+version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
-no service password-encryption
 !
 hostname EmpB1
 !
-ip cef
-no ip domain-lookup
+boot-start-marker
+boot-end-marker
+!
+!
+!
+no aaa new-model
 no ip icmp rate-limit unreachable
-ip tcp synwait 5
-no cdp log mismatch duplex
+ip cef
+!
+!
+!
+!
+!
+!
+no ip domain lookup
+ipv6 unicast-routing
+ipv6 cef
+!
+!
+multilink bundle-name authenticated
+!
+!
+!
+!
+!
+!
+!
+!
+!
+ip tcp synwait-time 5
+! 
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+interface FastEthernet0/0
+ ip address 192.100.1.22 255.255.255.252
+ ip ospf 2 area 0
+ speed auto
+ duplex auto
+ ipv6 address 2001:100:1::22/127
+ ipv6 ospf 2 area 0
+!
+interface FastEthernet0/1
+ ip address 110.2.1.1 255.255.255.128
+ ip ospf 2 area 0
+ speed auto
+ duplex auto
+ ipv6 address 3001:21::1/49
+ ipv6 ospf 2 area 0
+!
+interface FastEthernet1/0
+ no ip address
+ shutdown
+ speed auto
+ duplex auto
+!
+interface FastEthernet1/1
+ no ip address
+ shutdown
+ speed auto
+ duplex auto
+!
+interface FastEthernet2/0
+ no ip address
+ shutdown
+ speed auto
+ duplex auto
+!
+interface FastEthernet2/1
+ no ip address
+ shutdown
+ speed auto
+ duplex auto
+!
+router ospf 2
+!
+ip forward-protocol nd
+!
+!
+no ip http server
+no ip http secure-server
+!
+ipv6 router ospf 2
+!
+!
+!
+!
+control-plane
+!
 !
 line con 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+ stopbits 1
 line aux 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+ stopbits 1
+line vty 0 4
+ login
 !
 !
 end
