--- a/project-files/dynamips/04e2ed59-1c5e-4b4f-8e69-6e96303bd75e/configs/i8_startup-config.cfg
+++ b/project-files/dynamips/04e2ed59-1c5e-4b4f-8e69-6e96303bd75e/configs/i8_startup-config.cfg
@@ -1,9 +1,7 @@
 !
-!
-!
 
 !
-! Last configuration change at 19:36:57 UTC Mon Dec 16 2019
+! Last configuration change at 21:23:45 UTC Tue Dec 17 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -97,6 +95,27 @@ interface FastEthernet2/1
  duplex auto
 !
 router ospf 2
+!
+router bgp 1000
+ bgp log-neighbor-changes
+ neighbor 4.4.4.1 remote-as 2000
+ neighbor 2001:4:4::1 remote-as 2000
+ neighbor 2001:100:1::15 remote-as 65000
+ neighbor 192.100.1.15 remote-as 65000
+ !
+ address-family ipv4
+  redistribute ospf 2
+  neighbor 4.4.4.1 activate
+  no neighbor 2001:4:4::1 activate
+  no neighbor 2001:100:1::15 activate
+  neighbor 192.100.1.15 activate
+ exit-address-family
+ !
+ address-family ipv6
+  redistribute ospf 2
+  neighbor 2001:4:4::1 activate
+  neighbor 2001:100:1::15 activate
+ exit-address-family
 !
 ip forward-protocol nd
 !
