--- a/project-files/dynamips/75a1ac20-ff69-4778-899f-8b35b5e501e3/configs/i12_startup-config.cfg
+++ b/project-files/dynamips/75a1ac20-ff69-4778-899f-8b35b5e501e3/configs/i12_startup-config.cfg
@@ -1,28 +1,130 @@
 !
 !
+
 !
+! Last configuration change at 20:52:37 UTC Tue Dec 17 2019
+!
+version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
-no service password-encryption
 !
 hostname Madrid
 !
-ip cef
-no ip domain-lookup
+boot-start-marker
+boot-end-marker
+!
+!
+!
+no aaa new-model
 no ip icmp rate-limit unreachable
-ip tcp synwait 5
-no cdp log mismatch duplex
+ip cef
+!
+!
+!
+!
+!
+!
+no ip domain lookup
+no ipv6 cef
+!
+!
+multilink bundle-name authenticated
+!
+!
+!
+!
+!
+!
+!
+!
+!
+ip tcp synwait-time 5
+! 
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+interface FastEthernet0/0
+ ip address 65.0.1.1 255.255.255.0
+ speed auto
+ duplex auto
+ ipv6 address 2201:65::1/48
+!
+interface FastEthernet0/1
+ ip address 4.4.4.10 255.255.255.252
+ speed auto
+ duplex auto
+ ipv6 address 2001:4:4::10/127
+!
+interface FastEthernet1/0
+ ip address 4.4.4.5 255.255.255.252
+ speed auto
+ duplex auto
+ ipv6 address 2001:4:4::5/127
+!
+interface FastEthernet1/1
+ no ip address
+ shutdown
+ speed auto
+ duplex auto
+!
+interface FastEthernet2/0
+ no ip address
+ shutdown
+ speed auto
+ duplex auto
+!
+interface FastEthernet2/1
+ no ip address
+ shutdown
+ speed auto
+ duplex auto
+!
+router bgp 3000
+ bgp log-neighbor-changes
+ neighbor 4.4.4.6 remote-as 1000
+ neighbor 4.4.4.9 remote-as 2000
+ neighbor 2001:4:4::6 remote-as 1000
+ neighbor 2001:4:4::9 remote-as 2000
+ !
+ address-family ipv4
+  neighbor 4.4.4.6 activate
+  neighbor 4.4.4.9 activate
+  no neighbor 2001:4:4::6 activate
+  no neighbor 2001:4:4::9 activate
+ exit-address-family
+!
+ip forward-protocol nd
+!
+!
+no ip http server
+no ip http secure-server
+!
+!
+!
+!
+control-plane
+!
 !
 line con 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+ stopbits 1
 line aux 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+ stopbits 1
+line vty 0 4
+ login
 !
 !
 end
