--- a/project-files/dynamips/76a4d92e-cb78-449d-a584-1a445a08b51e/configs/i11_startup-config.cfg
+++ b/project-files/dynamips/76a4d92e-cb78-449d-a584-1a445a08b51e/configs/i11_startup-config.cfg
@@ -1,28 +1,134 @@
 !
 !
+
 !
+version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
-no service password-encryption
 !
 hostname Vigo
 !
-ip cef
-no ip domain-lookup
+boot-start-marker
+boot-end-marker
+!
+!
+!
+no aaa new-model
 no ip icmp rate-limit unreachable
-ip tcp synwait 5
-no cdp log mismatch duplex
+ip cef
+!
+!
+!
+!
+!
+!
+no ip domain lookup
+ipv6 unicast-routing
+ipv6 cef
+!
+!
+multilink bundle-name authenticated
+!
+!
+!
+!
+!
+!
+!
+!
+!
+ip tcp synwait-time 5
+! 
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+interface FastEthernet0/0
+ ip address 200.100.1.1 255.255.255.0
+ speed auto
+ duplex auto
+ ipv6 address 2201:200:100::1/48
+!
+interface FastEthernet0/1
+ ip address 200.200.1.1 255.255.255.0
+ speed auto
+ duplex auto
+ ipv6 address 2201:200:200::1/48
+!
+interface FastEthernet1/0
+ no ip address
+ shutdown
+ speed auto
+ duplex auto
+!
+interface FastEthernet1/1
+ ip address 4.4.4.1 255.255.255.252
+ speed auto
+ duplex auto
+ ipv6 address 2001:4:4::1/127
+!
+interface FastEthernet2/0
+ ip address 4.4.4.9 255.255.255.252
+ speed auto
+ duplex auto
+ ipv6 address 2001:4:4::9/127
+!
+interface FastEthernet2/1
+ no ip address
+ shutdown
+ speed auto
+ duplex auto
+!
+router bgp 2000
+ bgp log-neighbor-changes
+ neighbor 4.4.4.2 remote-as 1000
+ neighbor 4.4.4.10 remote-as 3000
+ neighbor 2001:4:4::2 remote-as 1000
+ neighbor 2001:4:4::10 remote-as 3000
+ !
+ address-family ipv4
+  neighbor 4.4.4.2 activate
+  neighbor 4.4.4.10 activate
+  no neighbor 2001:4:4::2 activate
+  no neighbor 2001:4:4::10 activate
+ exit-address-family
+ !
+ address-family ipv6
+  neighbor 2001:4:4::2 activate
+  neighbor 2001:4:4::10 activate
+ exit-address-family
+!
+ip forward-protocol nd
+!
+!
+no ip http server
+no ip http secure-server
+!
+!
+!
+!
+control-plane
+!
 !
 line con 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+ stopbits 1
 line aux 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+ stopbits 1
+line vty 0 4
+ login
 !
 !
 end
