--- a/project-files/dynamips/983e5c8e-53f0-4e58-a811-644c55d51834/configs/i9_startup-config.cfg
+++ b/project-files/dynamips/983e5c8e-53f0-4e58-a811-644c55d51834/configs/i9_startup-config.cfg
@@ -1,8 +1,7 @@
 !
-!
 
 !
-! Last configuration change at 23:49:36 UTC Mon Dec 16 2019
+! Last configuration change at 21:47:21 UTC Tue Dec 17 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -100,6 +99,22 @@ interface FastEthernet2/1
  duplex auto
 !
 router ospf 2
+!
+router bgp 1000
+ bgp log-neighbor-changes
+ neighbor 4.4.4.5 remote-as 3000
+ neighbor 2001:4:4::5 remote-as 3000
+ !
+ address-family ipv4
+  redistribute ospf 2
+  neighbor 4.4.4.5 activate
+  no neighbor 2001:4:4::5 activate
+ exit-address-family
+ !
+ address-family ipv6
+  redistribute ospf 2
+  neighbor 2001:4:4::5 activate
+ exit-address-family
 !
 ip forward-protocol nd
 !
