--- a/project-files/dynamips/e261e43e-1bc9-4c5d-8cf8-87134312184e/configs/i10_startup-config.cfg
+++ b/project-files/dynamips/e261e43e-1bc9-4c5d-8cf8-87134312184e/configs/i10_startup-config.cfg
@@ -1,9 +1,7 @@
 !
-!
-!
 
 !
-! Last configuration change at 20:01:02 UTC Mon Dec 16 2019
+! Last configuration change at 20:54:49 UTC Tue Dec 17 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -97,6 +95,22 @@ interface FastEthernet2/1
  duplex auto
 !
 router ospf 2
+!
+router bgp 65000
+ bgp log-neighbor-changes
+ neighbor 2001:100:1::1 remote-as 1000
+ neighbor 192.100.1.1 remote-as 1000
+ !
+ address-family ipv4
+  network 100.3.1.0
+  no neighbor 2001:100:1::1 activate
+  neighbor 192.100.1.1 activate
+ exit-address-family
+ !
+ address-family ipv6
+  network 3001:31::/48
+  neighbor 2001:100:1::1 activate
+ exit-address-family
 !
 ip forward-protocol nd
 !
