bgp almost working fully

--- a/project-files/dynamips/75a1ac20-ff69-4778-899f-8b35b5e501e3/configs/i12_startup-config.cfg
+++ b/project-files/dynamips/75a1ac20-ff69-4778-899f-8b35b5e501e3/configs/i12_startup-config.cfg
@@ -1,8 +1,7 @@
 !
-!
 
 !
-! Last configuration change at 20:52:37 UTC Tue Dec 17 2019
+! Last configuration change at 00:01:07 UTC Thu Dec 19 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -25,7 +24,8 @@ ip cef
 !
 !
 no ip domain lookup
-no ipv6 cef
+ipv6 unicast-routing
+ipv6 cef
 !
 !
 multilink bundle-name authenticated
@@ -96,9 +96,16 @@ router bgp 3000
  !
  address-family ipv4
   neighbor 4.4.4.6 activate
+  neighbor 4.4.4.6 default-originate
   neighbor 4.4.4.9 activate
   no neighbor 2001:4:4::6 activate
   no neighbor 2001:4:4::9 activate
+ exit-address-family
+ !
+ address-family ipv6
+  neighbor 2001:4:4::6 activate
+  neighbor 2001:4:4::6 default-originate
+  neighbor 2001:4:4::9 activate
  exit-address-family
 !
 ip forward-protocol nd
