--- a/project-files/dynamips/76a4d92e-cb78-449d-a584-1a445a08b51e/configs/i11_startup-config.cfg
+++ b/project-files/dynamips/76a4d92e-cb78-449d-a584-1a445a08b51e/configs/i11_startup-config.cfg
@@ -1,6 +1,7 @@
 !
-!
 
+!
+! Last configuration change at 23:53:03 UTC Wed Dec 18 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -95,6 +96,7 @@ router bgp 2000
  !
  address-family ipv4
   neighbor 4.4.4.2 activate
+  neighbor 4.4.4.2 default-originate
   neighbor 4.4.4.10 activate
   no neighbor 2001:4:4::2 activate
   no neighbor 2001:4:4::10 activate
@@ -102,6 +104,7 @@ router bgp 2000
  !
  address-family ipv6
   neighbor 2001:4:4::2 activate
+  neighbor 2001:4:4::2 default-originate
   neighbor 2001:4:4::10 activate
  exit-address-family
 !
