bgp middle point done

--- a/project-files/dynamips/5214fb2b-d1eb-4602-9a37-34120b61c969/configs/i9_startup-config.cfg
+++ b/project-files/dynamips/5214fb2b-d1eb-4602-9a37-34120b61c969/configs/i9_startup-config.cfg
@@ -1,7 +1,7 @@
 !
 
 !
-! Last configuration change at 23:59:22 UTC Wed Dec 18 2019
+! Last configuration change at 20:05:44 UTC Sat Dec 21 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -26,7 +26,6 @@ ip cef
 no ip domain lookup
 ipv6 unicast-routing
 ipv6 cef
-ipv6 multicast-routing
 !
 !
 multilink bundle-name authenticated
@@ -72,29 +71,9 @@ interface FastEthernet0/1
 interface FastEthernet1/0
  ip address 192.100.2.1 255.255.255.0
  ip ospf 2 area 0
- speed auto
- duplex auto
- ipv6 address 2001:100:1::5/127
+ duplex full
  ipv6 address 2001:100:2::1/48
  ipv6 ospf 2 area 0
-!
-interface FastEthernet1/1
- no ip address
- shutdown
- speed auto
- duplex auto
-!
-interface FastEthernet2/0
- no ip address
- shutdown
- speed auto
- duplex auto
-!
-interface FastEthernet2/1
- no ip address
- shutdown
- speed auto
- duplex auto
 !
 router ospf 2
 !
@@ -102,26 +81,49 @@ router bgp 1000
  bgp log-neighbor-changes
  neighbor 4.4.4.5 remote-as 3000
  neighbor 2001:4:4::5 remote-as 3000
+ neighbor 2001:100:1::9 remote-as 1000
+ neighbor 2001:100:1::11 remote-as 1000
+ neighbor 2001:100:1::12 remote-as 1000
+ neighbor 192.100.1.9 remote-as 1000
+ neighbor 192.100.1.11 remote-as 1000
+ neighbor 192.100.1.12 remote-as 1000
  !
  address-family ipv4
-  redistribute ospf 2
+  network 192.100.1.8 mask 255.255.255.248
   neighbor 4.4.4.5 activate
   no neighbor 2001:4:4::5 activate
+  no neighbor 2001:100:1::9 activate
+  no neighbor 2001:100:1::11 activate
+  no neighbor 2001:100:1::12 activate
+  neighbor 192.100.1.9 activate
+  neighbor 192.100.1.9 next-hop-self
+  neighbor 192.100.1.11 activate
+  neighbor 192.100.1.11 next-hop-self
+  neighbor 192.100.1.12 activate
+  neighbor 192.100.1.12 next-hop-self
  exit-address-family
  !
  address-family ipv6
-  redistribute ospf 2
+  network 2001:100:1::8/126
   neighbor 2001:4:4::5 activate
+  neighbor 2001:100:1::9 activate
+  neighbor 2001:100:1::11 activate
+  neighbor 2001:100:1::12 activate
  exit-address-family
 !
 ip forward-protocol nd
 !
+ip as-path access-list 1 permit ^3000$
+ip as-path access-list 1 permit _3000$
 !
 no ip http server
 no ip http secure-server
 !
 ipv6 router ospf 2
 !
+!
+route-map route-lisboa permit 10
+ match as-path 1
 !
 !
 !
