--- a/project-files/dynamips/75a1ac20-ff69-4778-899f-8b35b5e501e3/configs/i12_startup-config.cfg
+++ b/project-files/dynamips/75a1ac20-ff69-4778-899f-8b35b5e501e3/configs/i12_startup-config.cfg
@@ -1,7 +1,12 @@
 !
+!
+!
+!
+!
+!
 
 !
-! Last configuration change at 00:01:07 UTC Thu Dec 19 2019
+! Last configuration change at 17:24:34 UTC Sat Dec 21 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -95,6 +100,8 @@ router bgp 3000
  neighbor 2001:4:4::9 remote-as 2000
  !
  address-family ipv4
+  network 65.0.1.0
+  network 65.0.1.0 mask 255.255.255.0
   neighbor 4.4.4.6 activate
   neighbor 4.4.4.6 default-originate
   neighbor 4.4.4.9 activate
