--- a/project-files/dynamips/aed8a072-81a0-4e74-a867-17700af8f9a4/configs/i8_startup-config.cfg
+++ b/project-files/dynamips/aed8a072-81a0-4e74-a867-17700af8f9a4/configs/i8_startup-config.cfg
@@ -1,6 +1,8 @@
 !
 
 !
+! Last configuration change at 20:12:34 UTC Sat Dec 21 2019
+!
 version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -69,28 +71,9 @@ interface FastEthernet0/1
 interface FastEthernet1/0
  ip address 192.100.1.9 255.255.255.248
  ip ospf 2 area 0
- speed auto
- duplex auto
+ duplex full
  ipv6 address 2001:100:1::9/126
  ipv6 ospf 2 area 0
-!
-interface FastEthernet1/1
- no ip address
- shutdown
- speed auto
- duplex auto
-!
-interface FastEthernet2/0
- no ip address
- shutdown
- speed auto
- duplex auto
-!
-interface FastEthernet2/1
- no ip address
- shutdown
- speed auto
- duplex auto
 !
 router ospf 2
 !
@@ -98,31 +81,57 @@ router bgp 1000
  bgp log-neighbor-changes
  neighbor 4.4.4.1 remote-as 2000
  neighbor 2001:4:4::1 remote-as 2000
+ neighbor 2001:100:1::10 remote-as 1000
+ neighbor 2001:100:1::11 remote-as 1000
+ neighbor 2001:100:1::12 remote-as 1000
  neighbor 2001:100:1::15 remote-as 65000
+ neighbor 192.100.1.10 remote-as 1000
+ neighbor 192.100.1.11 remote-as 1000
+ neighbor 192.100.1.12 remote-as 1000
  neighbor 192.100.1.15 remote-as 65000
  !
  address-family ipv4
-  redistribute ospf 2
+  network 192.100.1.8 mask 255.255.255.248
   neighbor 4.4.4.1 activate
+  neighbor 4.4.4.1 weight 60000
   no neighbor 2001:4:4::1 activate
+  no neighbor 2001:100:1::10 activate
+  no neighbor 2001:100:1::11 activate
+  no neighbor 2001:100:1::12 activate
   no neighbor 2001:100:1::15 activate
+  neighbor 192.100.1.10 activate
+  neighbor 192.100.1.10 next-hop-self
+  neighbor 192.100.1.11 activate
+  neighbor 192.100.1.11 next-hop-self
+  neighbor 192.100.1.11 route-map route-porto out
+  neighbor 192.100.1.12 activate
+  neighbor 192.100.1.12 next-hop-self
   neighbor 192.100.1.15 activate
  exit-address-family
  !
  address-family ipv6
-  redistribute ospf 2
+  network 2001:100:1::8/126
   neighbor 2001:4:4::1 activate
+  neighbor 2001:100:1::10 activate
+  neighbor 2001:100:1::11 activate
+  neighbor 2001:100:1::12 activate
   neighbor 2001:100:1::15 activate
  exit-address-family
 !
 ip forward-protocol nd
 !
+ip as-path access-list 1 permit ^3000$
+ip as-path access-list 1 permit _3000$
 !
 no ip http server
 no ip http secure-server
 !
 ipv6 router ospf 2
 !
+!
+route-map route-porto permit 10
+ match as-path 1
+ set local-preference 300
 !
 !
 !
