--- a/project-files/dynamips/4eb5e754-ab15-45ae-912b-577c452f2bb3/configs/i1_startup-config.cfg
+++ b/project-files/dynamips/4eb5e754-ab15-45ae-912b-577c452f2bb3/configs/i1_startup-config.cfg
@@ -1,8 +1,6 @@
 !
 
 !
-! Last configuration change at 23:59:18 UTC Wed Dec 18 2019
-!
 version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -100,6 +98,30 @@ interface FastEthernet2/1
  duplex auto
 !
 router ospf 2
+!
+router bgp 1000
+ bgp log-neighbor-changes
+ neighbor 2001:100:1::9 remote-as 1000
+ neighbor 2001:100:1::10 remote-as 1000
+ neighbor 2001:100:1::12 remote-as 1000
+ neighbor 192.100.1.9 remote-as 1000
+ neighbor 192.100.1.10 remote-as 1000
+ neighbor 192.100.1.12 remote-as 1000
+ !
+ address-family ipv4
+  no neighbor 2001:100:1::9 activate
+  no neighbor 2001:100:1::10 activate
+  no neighbor 2001:100:1::12 activate
+  neighbor 192.100.1.9 activate
+  neighbor 192.100.1.10 activate
+  neighbor 192.100.1.12 activate
+ exit-address-family
+ !
+ address-family ipv6
+  neighbor 2001:100:1::9 activate
+  neighbor 2001:100:1::10 activate
+  neighbor 2001:100:1::12 activate
+ exit-address-family
 !
 ip forward-protocol nd
 !
