--- a/project-files/dynamips/76a4d92e-cb78-449d-a584-1a445a08b51e/configs/i11_startup-config.cfg
+++ b/project-files/dynamips/76a4d92e-cb78-449d-a584-1a445a08b51e/configs/i11_startup-config.cfg
@@ -1,8 +1,6 @@
 !
 
 !
-! Last configuration change at 23:53:03 UTC Wed Dec 18 2019
-!
 version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -95,6 +93,8 @@ router bgp 2000
  neighbor 2001:4:4::10 remote-as 3000
  !
  address-family ipv4
+  network 200.100.1.0
+  network 200.200.1.0
   neighbor 4.4.4.2 activate
   neighbor 4.4.4.2 default-originate
   neighbor 4.4.4.10 activate
