only first point missing on bgp, everythign else working

--- a/project-files/dynamips/aed8a072-81a0-4e74-a867-17700af8f9a4/configs/i8_startup-config.cfg
+++ b/project-files/dynamips/aed8a072-81a0-4e74-a867-17700af8f9a4/configs/i8_startup-config.cfg
@@ -1,7 +1,7 @@
 !
 
 !
-! Last configuration change at 20:12:34 UTC Sat Dec 21 2019
+! Last configuration change at 01:22:12 UTC Sun Dec 22 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -101,11 +101,14 @@ router bgp 1000
   no neighbor 2001:100:1::15 activate
   neighbor 192.100.1.10 activate
   neighbor 192.100.1.10 next-hop-self
+  neighbor 192.100.1.10 distribute-list fOut-priv-default out
   neighbor 192.100.1.11 activate
   neighbor 192.100.1.11 next-hop-self
+  neighbor 192.100.1.11 distribute-list fOut-priv-default out
   neighbor 192.100.1.11 route-map route-porto out
   neighbor 192.100.1.12 activate
   neighbor 192.100.1.12 next-hop-self
+  neighbor 192.100.1.12 distribute-list fOut-priv-default out
   neighbor 192.100.1.15 activate
  exit-address-family
  !
@@ -125,6 +128,10 @@ ip as-path access-list 1 permit _3000$
 !
 no ip http server
 no ip http secure-server
+!
+ip access-list standard fOut-priv-default
+ deny   65.0.1.0 0.0.0.255
+ permit any
 !
 ipv6 router ospf 2
 !
