--- a/project-files/dynamips/75a1ac20-ff69-4778-899f-8b35b5e501e3/configs/i12_startup-config.cfg
+++ b/project-files/dynamips/75a1ac20-ff69-4778-899f-8b35b5e501e3/configs/i12_startup-config.cfg
@@ -1,12 +1,7 @@
 !
-!
-!
-!
-!
-!
 
 !
-! Last configuration change at 17:24:34 UTC Sat Dec 21 2019
+! Last configuration change at 01:12:23 UTC Sun Dec 22 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -75,8 +70,7 @@ interface FastEthernet1/0
  ipv6 address 2001:4:4::5/127
 !
 interface FastEthernet1/1
- no ip address
- shutdown
+ ip address 65.0.2.1 255.255.255.0
  speed auto
  duplex auto
 !
@@ -102,6 +96,8 @@ router bgp 3000
  address-family ipv4
   network 65.0.1.0
   network 65.0.1.0 mask 255.255.255.0
+  network 65.0.2.0
+  network 65.0.2.0 mask 255.255.255.0
   neighbor 4.4.4.6 activate
   neighbor 4.4.4.6 default-originate
   neighbor 4.4.4.9 activate
