sip done, cdn started

--- a/project-files/dynamips/4eb5e754-ab15-45ae-912b-577c452f2bb3/configs/i1_startup-config.cfg
+++ b/project-files/dynamips/4eb5e754-ab15-45ae-912b-577c452f2bb3/configs/i1_startup-config.cfg
@@ -1,6 +1,8 @@
 !
 
 !
+! Last configuration change at 20:26:41 UTC Tue Dec 24 2019
+!
 version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -59,6 +61,7 @@ interface FastEthernet0/0
  speed auto
  duplex auto
  ipv6 address 2001:100:1::11/126
+ mpls ip
  ipv6 ospf 2 area 0
 !
 interface FastEthernet0/1
@@ -83,6 +86,7 @@ interface FastEthernet1/1
  speed auto
  duplex auto
  ipv6 address 2001:100:1::21/127
+ mpls ip
  ipv6 ospf 2 area 0
 !
 interface FastEthernet2/0
@@ -98,6 +102,7 @@ interface FastEthernet2/1
  duplex auto
 !
 router ospf 2
+ redistribute bgp 1000
 !
 router bgp 1000
  bgp log-neighbor-changes
@@ -107,14 +112,18 @@ router bgp 1000
  neighbor 192.100.1.9 remote-as 1000
  neighbor 192.100.1.10 remote-as 1000
  neighbor 192.100.1.12 remote-as 1000
+ neighbor 192.100.1.18 remote-as 1000
  !
  address-family ipv4
+  network 192.100.1.16 mask 255.255.255.252
+  redistribute ospf 2
   no neighbor 2001:100:1::9 activate
   no neighbor 2001:100:1::10 activate
   no neighbor 2001:100:1::12 activate
   neighbor 192.100.1.9 activate
   neighbor 192.100.1.10 activate
   neighbor 192.100.1.12 activate
+  neighbor 192.100.1.18 activate
  exit-address-family
  !
  address-family ipv6
