--- a/project-files/dynamips/042fb1d7-a655-4c1b-9cc0-535ed25488af/configs/i6_startup-config.cfg
+++ b/project-files/dynamips/042fb1d7-a655-4c1b-9cc0-535ed25488af/configs/i6_startup-config.cfg
@@ -1,16 +1,9 @@
 !
 !
 !
-!
-!
-!
-!
-!
-!
-!
 
 !
-! Last configuration change at 20:55:47 UTC Tue Dec 17 2019
+! Last configuration change at 23:31:37 UTC Sun Dec 22 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -26,6 +19,11 @@ boot-end-marker
 no aaa new-model
 no ip icmp rate-limit unreachable
 ip cef
+!
+ip vrf VPN-empB
+ rd 200:1
+ route-target export 200:1
+ route-target import 200:1
 !
 !
 !
@@ -60,21 +58,26 @@ ip tcp synwait-time 5
 !
 !
 !
+interface Loopback0
+ ip address 10.10.10.11 255.0.0.0
+ ip ospf network point-to-point
+ ip ospf 2 area 0
+!
 interface FastEthernet0/0
  ip address 192.100.1.26 255.255.255.252
  ip ospf 2 area 0
  speed auto
  duplex auto
  ipv6 address 2001:100:1::26/127
+ mpls ip
  ipv6 ospf 2 area 0
 !
 interface FastEthernet0/1
- ip address 110.1.1.129 255.255.255.128
- ip ospf 2 area 0
+ ip vrf forwarding VPN-empB
+ ip address 110.2.1.129 255.255.255.128
  speed auto
  duplex auto
  ipv6 address 3001:21:0:8000::1/49
- ipv6 ospf 2 area 0
 !
 interface FastEthernet1/0
  no ip address
@@ -101,12 +104,31 @@ interface FastEthernet2/1
  duplex auto
 !
 router ospf 2
+ redistribute static subnets
+!
+router bgp 200
+ bgp router-id 10.10.10.11
+ bgp log-neighbor-changes
+ neighbor 10.10.10.10 remote-as 200
+ neighbor 10.10.10.10 update-source Loopback0
+ !
+ address-family vpnv4
+  neighbor 10.10.10.10 activate
+  neighbor 10.10.10.10 send-community both
+ exit-address-family
+ !
+ address-family ipv4 vrf VPN-empB
+  redistribute connected
+ exit-address-family
 !
 ip forward-protocol nd
 !
 !
 no ip http server
 no ip http secure-server
+ip route 110.2.1.128 255.255.255.128 FastEthernet0/0
+ip route vrf VPN-empB 0.0.0.0 0.0.0.0 192.100.1.25 global
+ip route vrf VPN-empB 0.0.0.0 0.0.0.0 10.10.10.10 global
 !
 ipv6 router ospf 2
 !
