--- a/project-files/dynamips/5214fb2b-d1eb-4602-9a37-34120b61c969/configs/i9_startup-config.cfg
+++ b/project-files/dynamips/5214fb2b-d1eb-4602-9a37-34120b61c969/configs/i9_startup-config.cfg
@@ -1,5 +1,8 @@
 !
+!
 
+!
+! Last configuration change at 17:56:49 UTC Mon Dec 23 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -61,6 +64,7 @@ interface FastEthernet0/0
 interface FastEthernet0/1
  ip address 192.100.1.10 255.255.255.248
  ip ospf 2 area 0
+ ip ospf cost 5000
  speed auto
  duplex auto
  ipv6 address 2001:100:1::10/126
