--- a/project-files/dynamips/ed61a043-edae-401a-a188-e155cba71ff3/configs/i2_startup-config.cfg
+++ b/project-files/dynamips/ed61a043-edae-401a-a188-e155cba71ff3/configs/i2_startup-config.cfg
@@ -1,16 +1,7 @@
 !
-!
-!
-!
-!
-!
-!
-!
-!
-!
 
 !
-! Last configuration change at 20:55:00 UTC Tue Dec 17 2019
+! Last configuration change at 18:20:56 UTC Tue Dec 24 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -101,6 +92,14 @@ interface FastEthernet2/1
  duplex auto
 !
 router ospf 2
+!
+router bgp 1000
+ bgp log-neighbor-changes
+ neighbor 192.100.1.17 remote-as 1000
+ !
+ address-family ipv4
+  neighbor 192.100.1.17 activate
+ exit-address-family
 !
 ip forward-protocol nd
 !
