--- a/project-files/dynamips/f63d22ac-8776-41fe-a4da-e42753b0dbf6/configs/i4_startup-config.cfg
+++ b/project-files/dynamips/f63d22ac-8776-41fe-a4da-e42753b0dbf6/configs/i4_startup-config.cfg
@@ -1,6 +1,8 @@
 !
 
 !
+! Last configuration change at 13:17:21 UTC Tue Dec 24 2019
+!
 version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -59,6 +61,7 @@ interface FastEthernet0/0
  speed auto
  duplex auto
  ipv6 address 2001:100:1::12/126
+ mpls ip
  ipv6 ospf 2 area 0
 !
 interface FastEthernet0/1
@@ -67,6 +70,7 @@ interface FastEthernet0/1
  speed auto
  duplex auto
  ipv6 address 2001:100:1::25/127
+ mpls ip
  ipv6 ospf 2 area 0
 !
 interface FastEthernet1/0
@@ -107,6 +111,7 @@ router bgp 1000
  neighbor 192.100.1.11 remote-as 1000
  !
  address-family ipv4
+  redistribute ospf 2
   no neighbor 2001:100:1::9 activate
   no neighbor 2001:100:1::10 activate
   no neighbor 2001:100:1::11 activate
