only vpn, http and qemu missing

--- a/project-files/dynamips/4eb5e754-ab15-45ae-912b-577c452f2bb3/configs/i1_startup-config.cfg
+++ b/project-files/dynamips/4eb5e754-ab15-45ae-912b-577c452f2bb3/configs/i1_startup-config.cfg
@@ -1,7 +1,7 @@
 !
-
 !
-! Last configuration change at 20:26:41 UTC Tue Dec 24 2019
+!
+
 !
 version 15.2
 service timestamps debug datetime msec
@@ -29,6 +29,7 @@ ipv6 cef
 ipv6 multicast-routing
 !
 !
+mpls traffic-eng tunnels
 multilink bundle-name authenticated
 !
 !
@@ -55,39 +56,52 @@ ip tcp synwait-time 5
 interface Loopback0
  ip address 10.0.0.3 255.0.0.0
 !
+interface Tunnel1
+ ip unnumbered Loopback0
+ tunnel mode mpls traffic-eng
+ tunnel destination 10.0.0.5
+ tunnel mpls traffic-eng autoroute announce
+ tunnel mpls traffic-eng priority 7 7
+ tunnel mpls traffic-eng bandwidth 20000
+ tunnel mpls traffic-eng path-option 1 explicit name path1
+!
 interface FastEthernet0/0
  ip address 192.100.1.11 255.255.255.248
- ip ospf 2 area 0
+ ip ospf 1 area 0
  speed auto
  duplex auto
  ipv6 address 2001:100:1::11/126
  mpls ip
- ipv6 ospf 2 area 0
+ mpls traffic-eng tunnels
+ ipv6 ospf 1 area 0
+ ip rsvp bandwidth 20000 20000
 !
 interface FastEthernet0/1
  ip address 192.100.1.17 255.255.255.252
  ip ospf 2 area 0
  speed auto
  duplex auto
- ipv6 address 2001:100:1::17/127
+ ipv6 address 2001:100:1::19/126
+ mpls traffic-eng tunnels
  ipv6 ospf 2 area 0
+ ip rsvp bandwidth 20000 20000
 !
 interface FastEthernet1/0
  ip address 192.100.3.1 255.255.255.0
- ip ospf 2 area 0
  speed auto
  duplex auto
  ipv6 address 2001:100:3::1/48
- ipv6 ospf 2 area 0
+ mpls traffic-eng tunnels
+ ip rsvp bandwidth 20000 20000
 !
 interface FastEthernet1/1
  ip address 192.100.1.21 255.255.255.252
- ip ospf 2 area 0
+ ip ospf 3 area 0
  speed auto
  duplex auto
- ipv6 address 2001:100:1::21/127
+ ipv6 address 2001:100:1::21/126
  mpls ip
- ipv6 ospf 2 area 0
+ ipv6 ospf 3 area 0
 !
 interface FastEthernet2/0
  no ip address
@@ -101,8 +115,15 @@ interface FastEthernet2/1
  speed auto
  duplex auto
 !
+router ospf 1
+ mpls traffic-eng router-id Loopback0
+ mpls traffic-eng area 0
+!
 router ospf 2
- redistribute bgp 1000
+ default-information originate always
+!
+router ospf 3
+ default-information originate always
 !
 router bgp 1000
  bgp log-neighbor-changes
@@ -112,21 +133,23 @@ router bgp 1000
  neighbor 192.100.1.9 remote-as 1000
  neighbor 192.100.1.10 remote-as 1000
  neighbor 192.100.1.12 remote-as 1000
- neighbor 192.100.1.18 remote-as 1000
  !
  address-family ipv4
-  network 192.100.1.16 mask 255.255.255.252
+  network 192.100.3.0
   redistribute ospf 2
+  redistribute ospf 3
   no neighbor 2001:100:1::9 activate
   no neighbor 2001:100:1::10 activate
   no neighbor 2001:100:1::12 activate
   neighbor 192.100.1.9 activate
   neighbor 192.100.1.10 activate
   neighbor 192.100.1.12 activate
-  neighbor 192.100.1.18 activate
  exit-address-family
  !
  address-family ipv6
+  redistribute ospf 2
+  redistribute ospf 3
+  network 2001:100:3::/48
   neighbor 2001:100:1::9 activate
   neighbor 2001:100:1::10 activate
   neighbor 2001:100:1::12 activate
@@ -137,8 +160,19 @@ ip forward-protocol nd
 !
 no ip http server
 no ip http secure-server
+ip route 110.1.1.128 255.255.255.128 Tunnel1
+!
+ip explicit-path name path1 enable
+ next-address 192.100.1.12
+ next-address 192.100.1.30
+!
+ipv6 router ospf 1
 !
 ipv6 router ospf 2
+ default-information originate always
+!
+ipv6 router ospf 3
+ default-information originate always
 !
 !
 !
