--- a/project-files/dynamips/5214fb2b-d1eb-4602-9a37-34120b61c969/configs/i9_startup-config.cfg
+++ b/project-files/dynamips/5214fb2b-d1eb-4602-9a37-34120b61c969/configs/i9_startup-config.cfg
@@ -1,8 +1,7 @@
 !
-!
 
 !
-! Last configuration change at 17:56:49 UTC Mon Dec 23 2019
+! Last configuration change at 15:00:01 UTC Fri Dec 27 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -53,31 +52,31 @@ ip tcp synwait-time 5
 !
 !
 interface Loopback0
- ip address 10.0.0.2 255.0.0.0
+ no ip address
+ shutdown
 !
 interface FastEthernet0/0
  ip address 4.4.4.6 255.255.255.252
  speed auto
  duplex auto
- ipv6 address 2001:4:4::6/127
+ ipv6 address 2001:4:4::6/126
 !
 interface FastEthernet0/1
  ip address 192.100.1.10 255.255.255.248
- ip ospf 2 area 0
+ ip ospf 1 area 0
  ip ospf cost 5000
  speed auto
  duplex auto
  ipv6 address 2001:100:1::10/126
- ipv6 ospf 2 area 0
+ ipv6 ospf 1 area 0
 !
 interface FastEthernet1/0
  ip address 192.100.2.1 255.255.255.0
- ip ospf 2 area 0
  duplex full
  ipv6 address 2001:100:2::1/48
- ipv6 ospf 2 area 0
 !
-router ospf 2
+router ospf 1
+ distance 240
 !
 router bgp 1000
  bgp log-neighbor-changes
@@ -92,7 +91,9 @@ router bgp 1000
  !
  address-family ipv4
   network 192.100.1.8 mask 255.255.255.248
+  network 192.100.2.0
   neighbor 4.4.4.5 activate
+  neighbor 4.4.4.5 route-map local in
   no neighbor 2001:4:4::5 activate
   no neighbor 2001:100:1::9 activate
   no neighbor 2001:100:1::11 activate
@@ -107,10 +108,14 @@ router bgp 1000
  !
  address-family ipv6
   network 2001:100:1::8/126
+  network 2001:100:2::/48
   neighbor 2001:4:4::5 activate
   neighbor 2001:100:1::9 activate
+  neighbor 2001:100:1::9 next-hop-self
   neighbor 2001:100:1::11 activate
+  neighbor 2001:100:1::11 next-hop-self
   neighbor 2001:100:1::12 activate
+  neighbor 2001:100:1::12 next-hop-self
  exit-address-family
 !
 ip forward-protocol nd
@@ -121,11 +126,16 @@ ip as-path access-list 1 permit _3000$
 no ip http server
 no ip http secure-server
 !
-ipv6 router ospf 2
+ipv6 router ospf 1
 !
+!
+route-map set-loc-pref permit 10
 !
 route-map route-lisboa permit 10
  match as-path 1
+!
+route-map local permit 10
+ set local-preference 130
 !
 !
 !
