--- a/project-files/dynamips/af97710d-4f28-4afe-a13d-79e9d7fc8f88/configs/i5_startup-config.cfg
+++ b/project-files/dynamips/af97710d-4f28-4afe-a13d-79e9d7fc8f88/configs/i5_startup-config.cfg
@@ -1,20 +1,8 @@
 !
 !
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
 
 !
-! Last configuration change at 20:54:25 UTC Tue Dec 17 2019
+! Last configuration change at 09:56:54 UTC Fri Dec 27 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -39,9 +27,9 @@ ip cef
 no ip domain lookup
 ipv6 unicast-routing
 ipv6 cef
-ipv6 multicast-routing
 !
 !
+mpls traffic-eng tunnels
 multilink bundle-name authenticated
 !
 !
@@ -67,31 +55,43 @@ ip tcp synwait-time 5
 !
 interface Loopback0
  ip address 10.0.0.5 255.0.0.0
- ip ospf 2 area 0
+!
+interface Tunnel1
+ ip unnumbered Loopback0
+ tunnel mode mpls traffic-eng
+ tunnel destination 10.0.0.3
+ tunnel mpls traffic-eng autoroute announce
+ tunnel mpls traffic-eng priority 7 7
+ tunnel mpls traffic-eng bandwidth 20000
+ tunnel mpls traffic-eng path-option 1 explicit name path1
 !
 interface FastEthernet0/0
  ip address 192.100.1.30 255.255.255.252
- ip ospf 2 area 0
+ ip ospf 1 area 0
  speed auto
  duplex auto
- ipv6 address 2001:100:1::30/127
- ipv6 ospf 2 area 0
+ ipv6 address 2001:100:1::2A/126
+ mpls traffic-eng tunnels
+ ipv6 ospf 1 area 0
+ ip rsvp bandwidth 20000 20000
 !
 interface FastEthernet0/1
  ip address 192.100.4.1 255.255.255.0
- ip ospf 2 area 0
+ ip ospf 6 area 0
  speed auto
  duplex auto
  ipv6 address 2001:100:4::1/48
- ipv6 ospf 2 area 0
+ ipv6 ospf 6 area 0
 !
 interface FastEthernet1/0
  ip address 192.100.1.33 255.255.255.252
- ip ospf 2 area 0
+ ip ospf 5 area 0
  speed auto
  duplex auto
- ipv6 address 2001:100:1::33/127
- ipv6 ospf 2 area 0
+ ipv6 address 2001:100:1::33/126
+ mpls traffic-eng tunnels
+ ipv6 ospf 5 area 0
+ ip rsvp bandwidth 20000 20000
 !
 interface FastEthernet1/1
  no ip address
@@ -111,7 +111,16 @@ interface FastEthernet2/1
  speed auto
  duplex auto
 !
-router ospf 2
+router ospf 1
+ redistribute ospf 6
+ redistribute ospf 5 subnets
+ mpls traffic-eng router-id Loopback0
+ mpls traffic-eng area 0
+!
+router ospf 6
+!
+router ospf 5
+ default-information originate always
 !
 ip forward-protocol nd
 !
@@ -119,7 +128,19 @@ ip forward-protocol nd
 no ip http server
 no ip http secure-server
 !
-ipv6 router ospf 2
+ip explicit-path name path1 enable
+ next-address 192.100.1.29
+ next-address 192.100.1.11
+!
+ipv6 router ospf 1
+ redistribute ospf 6
+ redistribute ospf 5
+!
+ipv6 router ospf 6
+ default-information originate always
+!
+ipv6 router ospf 5
+ default-information originate always
 !
 !
 !
