--- a/project-files/dynamips/5793c66a-4262-46b0-a314-c4ffb6d6569a/configs/i17_startup-config.cfg
+++ b/project-files/dynamips/5793c66a-4262-46b0-a314-c4ffb6d6569a/configs/i17_startup-config.cfg
@@ -2,13 +2,13 @@
 !
 
 !
-! Last configuration change at 11:07:36 UTC Fri Dec 27 2019
+! Last configuration change at 11:19:58 UTC Fri Dec 27 2019
 !
 version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
 !
-hostname EmpA1
+hostname DatacenterPorto
 !
 boot-start-marker
 boot-end-marker
@@ -16,18 +16,17 @@ boot-end-marker
 !
 !
 no aaa new-model
+no ip routing
 no ip icmp rate-limit unreachable
-ip cef
+no ip cef
 !
 !
 !
 !
 !
 !
-no ip domain lookup
-ip name-server 192.100.2.2
-ipv6 unicast-routing
-ipv6 cef
+ip name-server 192.100.2.3
+no ipv6 cef
 !
 !
 multilink bundle-name authenticated
@@ -54,54 +53,30 @@ ip tcp synwait-time 5
 !
 !
 interface FastEthernet0/0
- ip address 192.100.1.18 255.255.255.252
- ip ospf 2 area 0
+ ip address 192.100.1.13 255.255.255.248
+ no ip route-cache
  speed auto
  duplex auto
- ipv6 address 2001:100:1::18/126
- ipv6 ospf 2 area 0
 !
 interface FastEthernet0/1
- ip address 110.1.1.1 255.255.255.128
- ip ospf 2 area 0
+ no ip address
+ no ip route-cache
+ shutdown
  speed auto
  duplex auto
- ipv6 address 3001:11::1/49
- ipv6 ospf 2 area 0
 !
 interface FastEthernet1/0
  no ip address
+ no ip route-cache
  shutdown
- speed auto
- duplex auto
+ duplex full
 !
-interface FastEthernet1/1
- no ip address
- shutdown
- speed auto
- duplex auto
-!
-interface FastEthernet2/0
- no ip address
- shutdown
- speed auto
- duplex auto
-!
-interface FastEthernet2/1
- no ip address
- shutdown
- speed auto
- duplex auto
-!
-router ospf 2
-!
+ip default-gateway 192.100.1.12
 ip forward-protocol nd
 !
 !
 no ip http server
 no ip http secure-server
-!
-ipv6 router ospf 2
 !
 !
 !
