--- a/project-files/dynamips/75a1ac20-ff69-4778-899f-8b35b5e501e3/configs/i12_startup-config.cfg
+++ b/project-files/dynamips/75a1ac20-ff69-4778-899f-8b35b5e501e3/configs/i12_startup-config.cfg
@@ -1,11 +1,5 @@
 !
-!
-!
-!
-!
 
-!
-! Last configuration change at 01:12:23 UTC Sun Dec 22 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -65,13 +59,13 @@ interface FastEthernet0/1
  ip address 4.4.4.10 255.255.255.252
  speed auto
  duplex auto
- ipv6 address 2001:4:4::10/127
+ ipv6 address 2001:4:4::10/126
 !
 interface FastEthernet1/0
  ip address 4.4.4.5 255.255.255.252
  speed auto
  duplex auto
- ipv6 address 2001:4:4::5/127
+ ipv6 address 2001:4:4::5/126
 !
 interface FastEthernet1/1
  ip address 65.0.2.1 255.255.255.0
@@ -104,12 +98,14 @@ router bgp 3000
   network 65.0.2.0 mask 255.255.255.0
   neighbor 4.4.4.6 activate
   neighbor 4.4.4.6 default-originate
+  neighbor 4.4.4.6 route-map loc-pref in
   neighbor 4.4.4.9 activate
   no neighbor 2001:4:4::6 activate
   no neighbor 2001:4:4::9 activate
  exit-address-family
  !
  address-family ipv6
+  network 2201:65::/48
   neighbor 2001:4:4::6 activate
   neighbor 2001:4:4::6 default-originate
   neighbor 2001:4:4::9 activate
@@ -121,6 +117,9 @@ ip forward-protocol nd
 no ip http server
 no ip http secure-server
 !
+!
+route-map loc-pref permit 10
+ set local-preference 110
 !
 !
 !
