--- a/project-files/dynamips/76a4d92e-cb78-449d-a584-1a445a08b51e/configs/i11_startup-config.cfg
+++ b/project-files/dynamips/76a4d92e-cb78-449d-a584-1a445a08b51e/configs/i11_startup-config.cfg
@@ -1,11 +1,7 @@
 !
-!
-!
-!
-!
-!
-!
 
+!
+! Last configuration change at 15:10:08 UTC Fri Dec 27 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -77,13 +73,13 @@ interface FastEthernet1/1
  ip address 4.4.4.1 255.255.255.252
  speed auto
  duplex auto
- ipv6 address 2001:4:4::1/127
+ ipv6 address 2001:4:4::1/126
 !
 interface FastEthernet2/0
  ip address 4.4.4.9 255.255.255.252
  speed auto
  duplex auto
- ipv6 address 2001:4:4::9/127
+ ipv6 address 2001:4:4::9/126
 !
 interface FastEthernet2/1
  no ip address
@@ -103,12 +99,15 @@ router bgp 2000
   network 200.200.1.0
   neighbor 4.4.4.2 activate
   neighbor 4.4.4.2 default-originate
+  neighbor 4.4.4.2 route-map loc-pref-lower in
   neighbor 4.4.4.10 activate
   no neighbor 2001:4:4::2 activate
   no neighbor 2001:4:4::10 activate
  exit-address-family
  !
  address-family ipv6
+  network 2201:200:100::/48
+  network 2201:200:200::/48
   neighbor 2001:4:4::2 activate
   neighbor 2001:4:4::2 default-originate
   neighbor 2001:4:4::10 activate
@@ -120,6 +119,12 @@ ip forward-protocol nd
 no ip http server
 no ip http secure-server
 !
+!
+route-map loc-pref-lower permit 10
+ set local-preference 40
+!
+route-map loc-pref permit 10
+ set local-preference 110
 !
 !
 !
