--- a/project-files/dynamips/aed8a072-81a0-4e74-a867-17700af8f9a4/configs/i8_startup-config.cfg
+++ b/project-files/dynamips/aed8a072-81a0-4e74-a867-17700af8f9a4/configs/i8_startup-config.cfg
@@ -1,11 +1,7 @@
 !
-!
-!
-!
-!
 
 !
-! Last configuration change at 01:22:12 UTC Sun Dec 22 2019
+! Last configuration change at 15:10:27 UTC Fri Dec 27 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -56,39 +52,40 @@ ip tcp synwait-time 5
 !
 !
 interface Loopback0
- ip address 10.0.0.1 255.0.0.0
+ no ip address
+ shutdown
 !
 interface FastEthernet0/0
  ip address 4.4.4.2 255.255.255.252
  speed auto
  duplex auto
- ipv6 address 2001:4:4::2/127
+ ipv6 address 2001:4:4::2/126
 !
 interface FastEthernet0/1
  ip address 192.100.1.1 255.255.255.252
- ip ospf 2 area 0
  speed auto
  duplex auto
- ipv6 address 2001:100:1::1/127
- ipv6 ospf 2 area 0
+ ipv6 address 2001:100:1::1/126
 !
 interface FastEthernet1/0
  ip address 192.100.1.9 255.255.255.248
- ip ospf 2 area 0
+ ip ospf 1 area 0
  duplex full
  ipv6 address 2001:100:1::9/126
- ipv6 ospf 2 area 0
+ ipv6 ospf 1 area 0
 !
-router ospf 2
+router ospf 1
 !
 router bgp 1000
  bgp log-neighbor-changes
  neighbor 4.4.4.1 remote-as 2000
  neighbor 2001:4:4::1 remote-as 2000
+ neighbor 2001:100:1::2 remote-as 65000
  neighbor 2001:100:1::10 remote-as 1000
  neighbor 2001:100:1::11 remote-as 1000
  neighbor 2001:100:1::12 remote-as 1000
  neighbor 2001:100:1::15 remote-as 65000
+ neighbor 192.100.1.2 remote-as 65000
  neighbor 192.100.1.10 remote-as 1000
  neighbor 192.100.1.11 remote-as 1000
  neighbor 192.100.1.12 remote-as 1000
@@ -97,12 +94,13 @@ router bgp 1000
  address-family ipv4
   network 192.100.1.8 mask 255.255.255.248
   neighbor 4.4.4.1 activate
-  neighbor 4.4.4.1 weight 60000
   no neighbor 2001:4:4::1 activate
+  no neighbor 2001:100:1::2 activate
   no neighbor 2001:100:1::10 activate
   no neighbor 2001:100:1::11 activate
   no neighbor 2001:100:1::12 activate
   no neighbor 2001:100:1::15 activate
+  neighbor 192.100.1.2 activate
   neighbor 192.100.1.10 activate
   neighbor 192.100.1.10 next-hop-self
   neighbor 192.100.1.10 distribute-list fOut-priv-default out
@@ -117,11 +115,16 @@ router bgp 1000
  exit-address-family
  !
  address-family ipv6
+  redistribute ospf 1
   network 2001:100:1::8/126
   neighbor 2001:4:4::1 activate
+  neighbor 2001:100:1::2 activate
   neighbor 2001:100:1::10 activate
+  neighbor 2001:100:1::10 next-hop-self
   neighbor 2001:100:1::11 activate
+  neighbor 2001:100:1::11 next-hop-self
   neighbor 2001:100:1::12 activate
+  neighbor 2001:100:1::12 next-hop-self
   neighbor 2001:100:1::15 activate
  exit-address-family
 !
@@ -137,7 +140,7 @@ ip access-list standard fOut-priv-default
  deny   65.0.1.0 0.0.0.255
  permit any
 !
-ipv6 router ospf 2
+ipv6 router ospf 1
 !
 !
 route-map route-porto permit 10
