--- a/project-files/dynamips/e261e43e-1bc9-4c5d-8cf8-87134312184e/configs/i10_startup-config.cfg
+++ b/project-files/dynamips/e261e43e-1bc9-4c5d-8cf8-87134312184e/configs/i10_startup-config.cfg
@@ -1,20 +1,5 @@
 !
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
 
-!
-! Last configuration change at 20:54:49 UTC Tue Dec 17 2019
 !
 version 15.2
 service timestamps debug datetime msec
@@ -72,7 +57,7 @@ interface FastEthernet0/0
  ip ospf 2 area 0
  speed auto
  duplex auto
- ipv6 address 2001:100:1::2/127
+ ipv6 address 2001:100:1::2/126
  ipv6 ospf 2 area 0
 !
 interface FastEthernet0/1
@@ -118,6 +103,7 @@ router bgp 65000
   network 100.3.1.0
   no neighbor 2001:100:1::1 activate
   neighbor 192.100.1.1 activate
+  neighbor 192.100.1.1 default-originate
  exit-address-family
  !
  address-family ipv6
