--- a/project-files/dynamips/f63d22ac-8776-41fe-a4da-e42753b0dbf6/configs/i4_startup-config.cfg
+++ b/project-files/dynamips/f63d22ac-8776-41fe-a4da-e42753b0dbf6/configs/i4_startup-config.cfg
@@ -1,7 +1,7 @@
 !
-
 !
-! Last configuration change at 13:17:21 UTC Tue Dec 24 2019
+!
+
 !
 version 15.2
 service timestamps debug datetime msec
@@ -29,6 +29,7 @@ ipv6 cef
 ipv6 multicast-routing
 !
 !
+mpls traffic-eng tunnels
 multilink bundle-name authenticated
 !
 !
@@ -57,29 +58,35 @@ interface Loopback0
 !
 interface FastEthernet0/0
  ip address 192.100.1.12 255.255.255.248
- ip ospf 2 area 0
+ ip ospf 1 area 0
  speed auto
  duplex auto
  ipv6 address 2001:100:1::12/126
  mpls ip
- ipv6 ospf 2 area 0
+ mpls traffic-eng tunnels
+ ipv6 ospf 1 area 0
+ ip rsvp bandwidth 20000 20000
 !
 interface FastEthernet0/1
  ip address 192.100.1.25 255.255.255.252
- ip ospf 2 area 0
+ ip ospf 4 area 0
  speed auto
  duplex auto
- ipv6 address 2001:100:1::25/127
+ ipv6 address 2001:100:1::25/126
  mpls ip
- ipv6 ospf 2 area 0
+ mpls traffic-eng tunnels
+ ipv6 ospf 4 area 0
+ ip rsvp bandwidth 20000 20000
 !
 interface FastEthernet1/0
  ip address 192.100.1.29 255.255.255.252
- ip ospf 2 area 0
+ ip ospf 1 area 0
  speed auto
  duplex auto
- ipv6 address 2001:100:1::29/127
- ipv6 ospf 2 area 0
+ ipv6 address 2001:100:1::29/126
+ mpls traffic-eng tunnels
+ ipv6 ospf 1 area 0
+ ip rsvp bandwidth 20000 20000
 !
 interface FastEthernet1/1
  no ip address
@@ -99,31 +106,47 @@ interface FastEthernet2/1
  speed auto
  duplex auto
 !
-router ospf 2
+router ospf 1
+ default-information originate always
+ mpls traffic-eng router-id Loopback0
+ mpls traffic-eng area 0
+!
+router ospf 4
+ default-information originate always
 !
 router bgp 1000
  bgp log-neighbor-changes
  neighbor 2001:100:1::9 remote-as 1000
  neighbor 2001:100:1::10 remote-as 1000
  neighbor 2001:100:1::11 remote-as 1000
+ neighbor 2001:100:1::30 remote-as 1000
  neighbor 192.100.1.9 remote-as 1000
  neighbor 192.100.1.10 remote-as 1000
  neighbor 192.100.1.11 remote-as 1000
+ neighbor 192.100.1.30 remote-as 1000
  !
  address-family ipv4
-  redistribute ospf 2
+  network 192.100.1.8 mask 255.255.255.248
+  redistribute ospf 1 match internal external 1 external 2
+  redistribute ospf 4
   no neighbor 2001:100:1::9 activate
   no neighbor 2001:100:1::10 activate
   no neighbor 2001:100:1::11 activate
+  no neighbor 2001:100:1::30 activate
   neighbor 192.100.1.9 activate
   neighbor 192.100.1.10 activate
   neighbor 192.100.1.11 activate
+  neighbor 192.100.1.30 activate
  exit-address-family
  !
  address-family ipv6
+  redistribute ospf 1 match internal external 1 external 2
+  redistribute ospf 4
+  network 2001:100:1::8/126
   neighbor 2001:100:1::9 activate
   neighbor 2001:100:1::10 activate
   neighbor 2001:100:1::11 activate
+  neighbor 2001:100:1::30 activate
  exit-address-family
 !
 ip forward-protocol nd
@@ -132,7 +155,11 @@ ip forward-protocol nd
 no ip http server
 no ip http secure-server
 !
-ipv6 router ospf 2
+ipv6 router ospf 1
+ default-information originate always
+!
+ipv6 router ospf 4
+ default-information originate always
 !
 !
 !
