--- a/project-files/dynamips/4eb5e754-ab15-45ae-912b-577c452f2bb3/configs/i1_startup-config.cfg
+++ b/project-files/dynamips/4eb5e754-ab15-45ae-912b-577c452f2bb3/configs/i1_startup-config.cfg
@@ -1,7 +1,7 @@
 !
-!
-!
 
+!
+! Last configuration change at 18:35:46 UTC Mon Jan 6 2020
 !
 version 15.2
 service timestamps debug datetime msec
@@ -160,11 +160,14 @@ ip forward-protocol nd
 !
 no ip http server
 no ip http secure-server
-ip route 110.1.1.128 255.255.255.128 Tunnel1
 !
 ip explicit-path name path1 enable
  next-address 192.100.1.12
  next-address 192.100.1.30
+!
+ip access-list extended rota-portas
+ permit tcp any any eq www
+ permit tcp any any eq 443
 !
 ipv6 router ospf 1
 !
@@ -174,6 +177,10 @@ ipv6 router ospf 2
 ipv6 router ospf 3
  default-information originate always
 !
+!
+route-map rota-portas permit 10
+ match ip address rota-portas
+ set interface Tunnel1
 !
 !
 !
