--- a/project-files/dynamips/af97710d-4f28-4afe-a13d-79e9d7fc8f88/configs/i5_startup-config.cfg
+++ b/project-files/dynamips/af97710d-4f28-4afe-a13d-79e9d7fc8f88/configs/i5_startup-config.cfg
@@ -1,8 +1,7 @@
 !
-!
 
 !
-! Last configuration change at 09:56:54 UTC Fri Dec 27 2019
+! Last configuration change at 18:27:25 UTC Mon Jan 6 2020
 !
 version 15.2
 service timestamps debug datetime msec
@@ -127,10 +126,15 @@ ip forward-protocol nd
 !
 no ip http server
 no ip http secure-server
+ip route 110.1.1.0 255.255.255.128 Tunnel1
 !
 ip explicit-path name path1 enable
  next-address 192.100.1.29
  next-address 192.100.1.11
+!
+ip access-list extended rota-portas
+ permit tcp any any eq www
+ permit tcp any any eq 443
 !
 ipv6 router ospf 1
  redistribute ospf 6
@@ -142,6 +146,10 @@ ipv6 router ospf 6
 ipv6 router ospf 5
  default-information originate always
 !
+!
+route-map rota-portas permit 10
+ match ip address rota-portas
+ set interface Tunnel1
 !
 !
 !
